--- a/src/modeller/modeller.glade
+++ b/src/modeller/modeller.glade
@@ -25,6 +25,7 @@
               <object class="GtkButton" id="btn_okay">
                 <property name="label">gtk-ok</property>
                 <property name="visible">True</property>
+                <property name="sensitive">False</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
                 <property name="use_action_appearance">False</property>
@@ -171,6 +172,7 @@
                         <property name="label">gtk-add</property>
                         <property name="width_request">60</property>
                         <property name="visible">True</property>
+                        <property name="sensitive">False</property>
                         <property name="can_focus">True</property>
                         <property name="receives_default">True</property>
                         <property name="use_action_appearance">False</property>
