--- a/src/modeller/modeller.glade
+++ b/src/modeller/modeller.glade
@@ -2,6 +2,12 @@
 <interface>
   <requires lib="gtk+" version="2.16"/>
   <!-- interface-naming-policy project-wide -->
+  <object class="GtkAdjustment" id="adj_model_size">
+    <property name="lower">-256</property>
+    <property name="upper">256</property>
+    <property name="step_increment">1</property>
+    <property name="page_increment">10</property>
+  </object>
   <object class="GtkDialog" id="connector_dialog">
     <property name="can_focus">False</property>
     <property name="border_width">5</property>
@@ -369,16 +375,6 @@
     <property name="visible">True</property>
     <property name="can_focus">False</property>
     <property name="stock">gtk-remove</property>
-  </object>
-  <object class="GtkListStore" id="liststore1">
-    <columns>
-      <!-- column-name connector_name -->
-      <column type="gchararray"/>
-      <!-- column-name connector_face -->
-      <column type="gchararray"/>
-      <!-- column-name connector_pos -->
-      <column type="gint"/>
-    </columns>
   </object>
   <object class="GtkWindow" id="main_window">
     <property name="can_focus">False</property>
@@ -1323,10 +1319,11 @@
                                           <object class="GtkTreeView" id="view_connectors">
                                             <property name="visible">True</property>
                                             <property name="can_focus">True</property>
-                                            <property name="model">liststore1</property>
                                             <property name="headers_clickable">False</property>
+                                            <property name="enable_search">False</property>
                                             <property name="search_column">0</property>
                                             <property name="fixed_height_mode">True</property>
+                                            <property name="show_expanders">False</property>
                                             <child>
                                               <object class="GtkTreeViewColumn" id="col_connector_name">
                                                 <property name="spacing">2</property>
@@ -1337,7 +1334,7 @@
                                                 <child>
                                                   <object class="GtkCellRendererText" id="rnd_connector_name"/>
                                                   <attributes>
-                                                    <attribute name="text">1</attribute>
+                                                    <attribute name="text">0</attribute>
                                                   </attributes>
                                                 </child>
                                               </object>
@@ -1348,7 +1345,12 @@
                                                 <property name="fixed_width">60</property>
                                                 <property name="title" translatable="yes">Face</property>
                                                 <child>
-                                                  <object class="GtkCellRendererText" id="rnd_connector_face"/>
+                                                  <object class="GtkCellRendererCombo" id="rnd_connector_face">
+                                                    <property name="editable">True</property>
+                                                    <property name="has_entry">False</property>
+                                                    <property name="model">model_face_values</property>
+                                                    <property name="text_column">0</property>
+                                                  </object>
                                                   <attributes>
                                                     <attribute name="text">1</attribute>
                                                   </attributes>
@@ -1361,7 +1363,10 @@
                                                 <property name="fixed_width">70</property>
                                                 <property name="title" translatable="yes">Pos</property>
                                                 <child>
-                                                  <object class="GtkCellRendererSpin" id="rnd_connector_pos"/>
+                                                  <object class="GtkCellRendererSpin" id="rnd_connector_pos">
+                                                    <property name="editable">True</property>
+                                                    <property name="adjustment">adj_model_size</property>
+                                                  </object>
                                                   <attributes>
                                                     <attribute name="text">2</attribute>
                                                   </attributes>
@@ -1500,6 +1505,26 @@
     </child>
   </object>
   <object class="GtkAccelGroup" id="menu_accelerators"/>
+  <object class="GtkListStore" id="model_face_values">
+    <columns>
+      <!-- column-name values -->
+      <column type="gchararray"/>
+    </columns>
+    <data>
+      <row>
+        <col id="0" translatable="yes">Back</col>
+      </row>
+      <row>
+        <col id="0" translatable="yes">Front</col>
+      </row>
+      <row>
+        <col id="0" translatable="yes">Left</col>
+      </row>
+      <row>
+        <col id="0" translatable="yes">Right</col>
+      </row>
+    </data>
+  </object>
   <object class="GtkTreeStore" id="shape_list">
     <columns>
       <!-- column-name gchararray -->
