--- a/src/modeller/modeller.glade
+++ b/src/modeller/modeller.glade
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <interface>
-  <requires lib="gtk+" version="2.16"/>
+  <requires lib="gtk+" version="2.18"/>
   <!-- interface-naming-policy project-wide -->
   <object class="GtkAdjustment" id="adj_model_size">
     <property name="lower">-256</property>
@@ -1202,11 +1202,27 @@
                                         <property name="hscrollbar_policy">never</property>
                                         <property name="shadow_type">in</property>
                                         <child>
-                                          <object class="GtkTreeView" id="view_existing_tags">
+                                          <object class="GtkTreeView" id="view_tags">
                                             <property name="visible">True</property>
                                             <property name="can_focus">True</property>
-                                            <property name="search_column">0</property>
+                                            <property name="model">tag_list</property>
+                                            <property name="headers_visible">False</property>
+                                            <property name="enable_search">False</property>
                                             <property name="fixed_height_mode">True</property>
+                                            <child>
+                                              <object class="GtkTreeViewColumn" id="tag_column">
+                                                <property name="sizing">fixed</property>
+                                                <property name="fixed_width">160</property>
+                                                <property name="title" translatable="yes">Tag</property>
+                                                <property name="sort_column_id">0</property>
+                                                <child>
+                                                  <object class="GtkCellRendererText" id="rndr_tag"/>
+                                                  <attributes>
+                                                    <attribute name="text">0</attribute>
+                                                  </attributes>
+                                                </child>
+                                              </object>
+                                            </child>
                                           </object>
                                         </child>
                                       </object>
@@ -1539,6 +1555,12 @@
       <column type="gchararray"/>
       <!-- column-name gpointer -->
       <column type="gpointer"/>
+    </columns>
+  </object>
+  <object class="GtkListStore" id="tag_list">
+    <columns>
+      <!-- column-name tag -->
+      <column type="gchararray"/>
     </columns>
   </object>
 </interface>
